Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/TopOpeBRep/TopOpeBRepBipoint.h

#ifndef TopOpeBRep_Bipoint_H
#define TopOpeBRep_Bipoint_H

#include "../../Export_Import.h"

extern "C" DECL_EXPORT void* TopOpeBRep_Bipoint_Ctor();
extern "C" DECL_EXPORT void* TopOpeBRep_Bipoint_Ctor5107F6FE(
	int I1,
	int I2);
extern "C" DECL_EXPORT int TopOpeBRep_Bipoint_I1(void* instance);
extern "C" DECL_EXPORT int TopOpeBRep_Bipoint_I2(void* instance);
extern "C" DECL_EXPORT void TopOpeBRepBipoint_Dtor(void* instance);

#endif